<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="app_name">Mark Calculator</string>
    <string name="edit_message1">KU</string>
    <string name="edit_message2">MC</string>
    <string name="edit_message3">TI</string>
    <string name="edit_message4">C</string>
    <string name="edit_percent1">KU %</string>
    <string name="edit_percent2">MC %</string>
    <string name="edit_percent3">TI %</string>
    <string name="edit_percent4">C %</string>
    <string name="button_send">Calculate</string>
    <string name="final_answer">Your Mark is</string>
    <string name="error_message">Classes not Enabled</string>
    <string name="instructions">"1. The first tab is meant for individual calculations. If you need to make a mark calculation but not save it, this is where it is done. 
 2. Click setting in the menu. This is where you need to presave the information of the weights of the catagories for each class. 
 3. The third tab is for saving your marks. You need to first do step two in order to make use of this feature. Simply select the class you want to add a mark to and the catalog will show you what your average is"</string>
    <string name="howTo">"To add a new mark, press the + button. In the popup, enter a name for the mark (Example: Unit Test 1). Also enter the mark as a fraction, if you have the percent mark, just make the denominator out of 1. Select the catagory that it falls under and also the weight that that mark has. (Example: a test is usually weighted 5) 
 Note: Long click on the mark you want additional access to and proceed from there. The options are to either edit or delete the mark you long click on. The mark in the top corner is to two decimal places for your benefit and the bottom shows your mark in each of the catagories"</string>
    <string name="welcome">Welcome to Mark Calculator. This is an amazing app that will help you keep track of all the marks you have gotten. It is set up using the Ontario grading system which uses the 4 catagoies, Knowledge and Understanding, Making Connections (Application), Thinking and Inquiry, Communication. You can calculate the mark you get on an individual test by factoring in the weighting of the different catagories. This app will render the need for a teacher to provide a Mark Book update useless as this will do it for you. Please read the instructions on how to use this. I am sorry for the ads, but if they are too much of a both I can release a paid version with no ads. If there are any comment or concerns, please feel free to contact me, there is a tab located in the menu to do so. ENJOY!</string>
</resources>
