<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/Tab1" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/ScrollViewClass1" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:gravity="center" android:layout_gravity="right" android:id="@id/numeratorCalc" android:layout_width="75.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="25.0dip" android:hint="Mark" android:inputType="numberDecimal" />
            <View android:layout_gravity="right" android:id="@id/divider2" android:background="#ff7a7a7a" android:layout_width="75.0dip" android:layout_height="1.0dip" android:layout_marginRight="25.0dip" />
            <EditText android:gravity="center" android:layout_gravity="right" android:id="@id/denominatorCalc" android:layout_width="75.0dip" android:layout_height="wrap_content" android:layout_marginTop="-5.0dip" android:layout_marginRight="25.0dip" android:hint="Out of" android:inputType="numberDecimal" />
            <Button android:layout_gravity="right" android:id="@id/quickCalc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" android:text="Calculate" android:onClick="quickCalc" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_message1" android:focusable="true" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="-125.0dip" android:hint="@string/edit_message1" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_percent1" android:layout_width="60.0dip" android:layout_height="50.0dip" android:layout_marginLeft="75.0dip" android:layout_marginTop="-50.0dip" android:hint="@string/edit_percent1" android:ems="10" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_message2" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="5.0dip" android:hint="@string/edit_message2" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_percent2" android:layout_width="60.0dip" android:layout_height="50.0dip" android:layout_marginLeft="75.0dip" android:layout_marginTop="-50.0dip" android:hint="@string/edit_percent2" android:ems="10" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_message3" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="5.0dip" android:hint="@string/edit_message3" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_percent3" android:layout_width="60.0dip" android:layout_height="50.0dip" android:layout_marginLeft="75.0dip" android:layout_marginTop="-50.0dip" android:hint="@string/edit_percent3" android:ems="10" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_message4" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="5.0dip" android:hint="@string/edit_message4" android:inputType="numberDecimal" />
            <EditText android:textSize="14.0sp" android:gravity="center" android:id="@id/edit_percent4" android:layout_width="60.0dip" android:layout_height="50.0dip" android:layout_marginLeft="75.0dip" android:layout_marginTop="-50.0dip" android:hint="@string/edit_percent4" android:ems="10" android:inputType="numberDecimal" />
            <requestFocus />
            <TextView android:id="@id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="5.0dip" android:text="@string/final_answer" />
            <Button android:id="@id/saveButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:text="Calculate" android:onClick="gatherInformation" />
            <Spinner android:id="@id/spinnerMAIN" android:layout_width="wrap_content" android:layout_height="50.0dip" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView android:layout_gravity="bottom" android:id="@id/adViewTab1" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adSize="BANNER" ads:adUnitId="ca-app-pub-4733259834848580/2325224953" xmlns:ads="http://schemas.android.com/apk/res-auto" />
</LinearLayout>